# mcp-char-count

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
server/src/mcp_char_count/: README.md  pyproject.toml  server.py
tests/src/mcp_char_count/: test_server.py
